# Judit_BackgroundGradient

./: Cargo.toml  README.md  index.html
src/: dummy_ee.rs  main.rs
src/GradientButtonStyles/: Circular.rs  Conic.rs  Linear.rs  RepeatigLinear.rs  RepeatingCircular.rs  Solid.rs  mod.rs
src/sub_components/: BackgroundVisibilityToggle.rs  mod.rs
